--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
       "bcrypt": "^5.1.1",
       "dotenv": "^16.3.1",
       "joi": "^17.11.0",
+      "jsonwebtoken": "^9.0.2",
       "reflect-metadata": "^0.1.13",
       "typeorm": "0.3.17"
    },
