--- a/.env
+++ b/.env
@@ -1,3 +1,10 @@
-SECRET_KEY:"circle"
-Z:2
-username:"backend"
+SECRET_KEY="circle"
+Z=2
+username="backend"
+password="root"
+database="dumbways"
+
+cloud_name= 'dfrimbo6q'
+api_key= '172457677274769'
+api_secret= 'MNXubnvd7kJbzv12fzi-bWLnw4k' 
+CLOUDINARY_URL=cloudinary://172457677274769:MNXubnvd7kJbzv12fzi-bWLnw4k@dfrimbo6q
