--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
    "type": "commonjs",
    "devDependencies": {
       "@types/express": "^4.17.21",
+      "@types/multer": "^1.4.11",
       "@types/node": "^16.11.10",
       "express": "^4.18.2",
       "nodemon": "^3.0.2",
@@ -13,11 +14,15 @@
       "typescript": "4.5.2"
    },
    "dependencies": {
+      "@reduxjs/toolkit": "^2.0.1",
       "bcrypt": "^5.1.1",
+      "cloudinary": "^1.41.1",
       "cors": "^2.8.5",
       "dotenv": "^16.3.1",
       "joi": "^17.11.0",
       "jsonwebtoken": "^9.0.2",
+      "multer": "^1.4.5-lts.1",
+      "react-redux": "^9.0.4",
       "reflect-metadata": "^0.1.13",
       "typeorm": "0.3.17"
    },
