finishing follows list

--- a/.env
+++ b/.env
@@ -8,3 +8,5 @@ cloud_name= 'dfrimbo6q'
 api_key= '172457677274769'
 api_secret= 'MNXubnvd7kJbzv12fzi-bWLnw4k' 
 CLOUDINARY_URL=cloudinary://172457677274769:MNXubnvd7kJbzv12fzi-bWLnw4k@dfrimbo6q
+
+# rabbitQM
