--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
    "description": "Awesome project developed with TypeORM.",
    "type": "commonjs",
    "devDependencies": {
+      "@types/amqplib": "^0.10.4",
       "@types/express": "^4.17.21",
       "@types/multer": "^1.4.11",
       "@types/node": "^16.11.10",
@@ -15,6 +16,7 @@
    },
    "dependencies": {
       "@reduxjs/toolkit": "^2.0.1",
+      "amqplib": "^0.10.3",
       "bcrypt": "^5.1.1",
       "cloudinary": "^1.41.1",
       "cors": "^2.8.5",
@@ -28,6 +30,7 @@
    },
    "scripts": {
       "start": "nodemon src/index.ts",
-      "typeorm": "typeorm-ts-node-commonjs"
+      "typeorm": "typeorm-ts-node-commonjs",
+      "worker": "nodemon --exec ts-node src/worker/worker.ts"
    }
 }
