--- a/.env
+++ b/.env
@@ -10,3 +10,4 @@ api_secret= 'MNXubnvd7kJbzv12fzi-bWLnw4k'
 CLOUDINARY_URL=cloudinary://172457677274769:MNXubnvd7kJbzv12fzi-bWLnw4k@dfrimbo6q
 
 # rabbitQM
+queueName="threadQueue"
