--- a/package.json
+++ b/package.json
@@ -4,13 +4,20 @@
    "description": "Awesome project developed with TypeORM.",
    "type": "commonjs",
    "devDependencies": {
+      "@babel/preset-env": "^7.23.7",
+      "@babel/preset-typescript": "^7.23.3",
       "@types/amqplib": "^0.10.4",
+      "@types/bcrypt": "^5.0.2",
+      "@types/cors": "^2.8.17",
       "@types/express": "^4.17.21",
+      "@types/jsonwebtoken": "^9.0.5",
       "@types/multer": "^1.4.11",
       "@types/node": "^16.11.10",
       "express": "^4.18.2",
+      "i": "^0.3.7",
       "nodemon": "^3.0.2",
       "pg": "^8.11.3",
+      "ts-jest": "^29.1.1",
       "ts-node": "10.7.0",
       "typescript": "4.5.2"
    },
@@ -21,16 +28,23 @@
       "cloudinary": "^1.41.1",
       "cors": "^2.8.5",
       "dotenv": "^16.3.1",
+      "jest": "^29.7.0",
       "joi": "^17.11.0",
       "jsonwebtoken": "^9.0.2",
       "multer": "^1.4.5-lts.1",
       "react-redux": "^9.0.4",
+      "redis": "^4.6.12",
       "reflect-metadata": "^0.1.13",
+      "swagger-jsdoc": "^6.2.8",
+      "swagger-ui-express": "^5.0.0",
       "typeorm": "0.3.17"
    },
    "scripts": {
       "start": "nodemon src/index.ts",
       "typeorm": "typeorm-ts-node-commonjs",
-      "worker": "nodemon --exec ts-node src/worker/worker.ts"
+      "worker": "nodemon --exec ts-node src/worker",
+      "test": "jest",
+      "migration:generate": "npx typeorm-ts-node-commonjs migration:generate src/migration/MyMigration -d test/data-source.ts",
+      "migration:run": "npx typeorm-ts-node-commonjs migration:run -d test/data-source.ts"
    }
 }
